Support minify SVG files

--- a/fixtures/index.html
+++ b/fixtures/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <div>
-<img src="./demo-artwork.jpg">
-<img src="./demo-device-screen.png">
-<img src="./demo-large-photo.jpg">
-
+      <img src="./demo-artwork.jpg">
+      <img src="./demo-device-screen.png">
+      <img src="./demo-large-photo.jpg">
+      <img src="./test.svg">
     </div>
 </body>
 </html>
