--- a/fixtures/index.html
+++ b/fixtures/index.html
@@ -11,7 +11,8 @@
       <img src="./demo-artwork.jpg">
       <img src="./demo-device-screen.png">
       <img src="./demo-large-photo.jpg">
-      <img src="./test.svg">
+      <!-- https://github.com/jakearchibald/svgomg/blob/main/src/test-svgs/car-lite.svg -->
+      <img src="./car-lite.svg">
     </div>
 </body>
 </html>
