Support minify SVG files (#4)

--- a/fixtures/index.html
+++ b/fixtures/index.html
@@ -8,10 +8,11 @@
 </head>
 <body>
     <div>
-<img src="./demo-artwork.jpg">
-<img src="./demo-device-screen.png">
-<img src="./demo-large-photo.jpg">
-
+      <img src="./demo-artwork.jpg">
+      <img src="./demo-device-screen.png">
+      <img src="./demo-large-photo.jpg">
+      <!-- https://github.com/jakearchibald/svgomg/blob/main/src/test-svgs/car-lite.svg -->
+      <img src="./car-lite.svg">
     </div>
 </body>
 </html>
