--- a/fixtures/index.html
+++ b/fixtures/index.html
@@ -13,6 +13,10 @@
       <img src="./demo-large-photo.jpg">
       <!-- https://github.com/jakearchibald/svgomg/blob/main/src/test-svgs/car-lite.svg -->
       <img src="./car-lite.svg">
+      <!-- https://github.com/webmproject/libwebp/blob/main/examples/test.webp -->
+      <img src="./test.webp">
+      <!-- https://github.com/AOMediaCodec/libavif/blob/main/tests/data/sofa_grid1x5_420.avif -->
+      <img src="./sofa_grid1x5_420.avif">
     </div>
 </body>
 </html>
