--- a/fixtures/index.html
+++ b/fixtures/index.html
@@ -17,6 +17,8 @@
       <img src="./test.webp">
       <!-- https://github.com/AOMediaCodec/libavif/blob/main/tests/data/sofa_grid1x5_420.avif -->
       <img src="./sofa_grid1x5_420.avif">
+      <!-- https://github.com/jamsinclair/jSquash/blob/main/test/fixtures/test.jxl -->
+      <img src="./test.jxl">
     </div>
 </body>
 </html>
